# texgui

./: '  .gitignore  .gitmodules  :w  CMakeLists.txt  CMakePresets.json  Makefile  README.md  glsl_shader.frag.u32  glsl_shader.vert.u32  texgui.h  vulkan.frag  vulkan.vert
archived/: box.h  button.h  image.h  immediate.cpp  immediate.h  label.h  textinput.h  uicontext.cpp  uicontext.h  widget.cpp  widget.h  window.cpp
examples/: CMakeLists.txt  example1.cpp  example2.cpp
include/: button.h  column.h  container.h  context.h  context.hpp  defaults.h  gridlist.h  image.h  immediate.h  listitem.h  opengl_shaders.hpp  row.h  screen.h  texgui.h  texgui_GLFW.hpp  texgui_flags.hpp  texgui_glfw.hpp  texgui_internal.hpp  texgui_math.hpp  texgui_opengl.hpp  texgui_sdl3.hpp  texgui_settings.hpp  texgui_style.hpp  texgui_types.hpp  texgui_vulkan.hpp  types.h  util.h  vulkan_shaders.hpp  widget.h  window.h
include/src/: CMakeLists.txt
resources/shaders/: texgui_shaders.hpp
src/: CMakeLists.txt  box.cpp  button.cpp  column.cpp  context.cpp  context.hpp  image.cpp  immediate.cpp  label.cpp  label.h  listitem.cpp  row.cpp  screen.cpp  shader_impl.cpp  stb_impl.cpp  texgui.cpp  texgui_glfw.cpp  texgui_opengl.cpp  texgui_opengl.cpp.old  texgui_opengl.hpp  texgui_opengl_impl.cpp  texgui_sdl3.cpp  texgui_style.cpp  texgui_vulkan.cpp  texgui_vulkan.hpp  texgui_vulkan_impl.cpp  textinput.cpp  uicontext.cpp  uicontext.h  widget.cpp  window.cpp
